[gd_scene load_steps=15 format=3 uid="uid://yl1kdq707egr"]

[ext_resource type="Script" path="res://Scenes & Scripts/Prefabs/Structures/Production/housing.gd" id="1_wapyf"]
[ext_resource type="PackedScene" uid="uid://bs5ubhgxt5nqo" path="res://Scenes & Scripts/Asset Scenes/ol_forge.tscn" id="2_eiwek"]

[sub_resource type="BoxShape3D" id="BoxShape3D_rr254"]
size = Vector3(2, 1, 2)

[sub_resource type="BoxMesh" id="BoxMesh_4ipiy"]
size = Vector3(2, 1, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n0win"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="BoxMesh" id="BoxMesh_p8wuu"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bf4h5"]
albedo_color = Color(0.869146, 0.666209, 0.113049, 1)

[sub_resource type="Animation" id="Animation_u40vk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ywg0b"]
resource_name = "rotate"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1.5708, 0), Vector3(0, 3.14159, 0), Vector3(0, 4.71239, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nyg2k"]
_data = {
"RESET": SubResource("Animation_u40vk"),
"rotate": SubResource("Animation_ywg0b")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_i5op1"]
radius = 4.31946

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nej64"]
bg_color = Color(1, 0.337255, 0.337255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pa52"]
bg_color = Color(0, 0.713726, 0.443137, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_kfgwd"]
viewport_path = NodePath("HealthbarContainer")

[node name="Housing" type="StaticBody3D" groups=["Building", "CombatTarget", "FowObject", "MouseRaycast"]]
script = ExtResource("1_wapyf")

[node name="HousingColl" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_rr254")

[node name="HousingBody" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_4ipiy")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_n0win")

[node name="OL_forge" parent="." instance=ExtResource("2_eiwek")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -5.73361, -0.464318, 1.96848)
visible = false

[node name="HousingPause" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("BoxMesh_p8wuu")
surface_material_override/0 = SubResource("StandardMaterial3D_bf4h5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HousingPause"]
libraries = {
"": SubResource("AnimationLibrary_nyg2k")
}
autoplay = "rotate"

[node name="RangeArea" type="Area3D" parent="."]

[node name="RangeColl" type="CollisionShape3D" parent="RangeArea"]
shape = SubResource("SphereShape3D_i5op1")

[node name="HealthbarContainer" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="HealthBar" type="ProgressBar" parent="HealthbarContainer"]
offset_left = -1.0
offset_right = 353.0
offset_bottom = 27.0
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_nej64")
theme_override_styles/fill = SubResource("StyleBoxFlat_0pa52")
value = 100.0
show_percentage = false

[node name="HealthBarSprite" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.889443, 0.901891, 0)
visible = false
texture = SubResource("ViewportTexture_kfgwd")
